remove unneeded content

--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
-
-    <header>
-      CSS Diner
-      <div class="logo">
-        <plate><apple /></plate>
-      </div>
-    </header>
-
     <div class="col-wrapper bottom-half">
 
       <div class="left-col">
@@ -108,18 +100,9 @@ p {
       <div class="what-is-this">
         <h2>What is this?</h2>
         <p>It's a little game to help you learn CSS selectors. Type in the correct selector to complete each level. Get help on the right.</p>
-        <p>It's a work in progress, so please give me feedback!</p>
         <p>
-          Made by <a href="http://www.twitter.com/flukeout">@flukeout</a> with special thanks to...
+          Made by <a href="http://www.twitter.com/flukeout">@flukeout</a>, forked by Thinkful (thanks flukeout!)
         </p>
-        <p>
-          <a href="https://twitter.com/k88hudson">@k88hudson</a>, <a href="http://www.twitter.com/antlam7">@antlam7</a> and <a href="https://twitter.com/smashman2004">@smashman2004</a>.
-        </p>
-        <p>
-          Please submit issues and PRs at <a href="https://github.com/flukeout/restaurant">this Github repo</a>.
-        </p>
-
-
       </div>
 
       </div><!-- /left col -->
